# discord-unicode-fix

./: justfile
data/: emoji-short.csv  emoji.csv  proxied_emoji.csv
data-cleaning/: Cargo.toml
data-cleaning/src/: main.rs
data-collection/: Cargo.toml
data-collection/src/: main.rs
discord-unicode-fix/: package-lock.json  package.json  rollup.config.js
discord-unicode-fix-js/: package.json  rollup.config.js  test.js
discord-unicode-fix-js/src/: discord_unicode_fix.js  unicode_map.csv
discord-unicode-fix-rs/: Cargo.toml
discord-unicode-fix-rs/src/: lib.rs
discord-unicode-fix/resources/: discord_unicode_fix_bg.wasm
discord-unicode-fix/src/: index.js  wasm_bindgen.js
