[package]
name = "discord-unicode-fix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.2"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
unicode-segmentation = "1.10.1"
wasm-bindgen = "0.2.87"
